--- a/.gitignore
+++ b/.gitignore
@@ -15,14 +15,15 @@ venv/
 *.xlsx
 *.png
 !assets/logos/background.png
-!assets/logos/logo tcc.png
-!assets/logos/logo tcc branco.png
+!assets/logos/logo_tcc.png
+!assets/logos/logo_tcc_branco.png
 !assets/teams/*.png
 
 # Meus arquivos de debug/teste
 surgical_inspect*.py
 column_mapper.py
 gen_reqs.py
+sanitize_assets.py
 debug_*.py
 inspect_*.py
 reproduce_*.py
